--- a/Environments.xcconfig
+++ b/Environments.xcconfig
@@ -12,6 +12,6 @@ SHAREPLAY_MOCK = YES
 SWIFT_ACTIVE_COMPILATION_CONDITIONS_SHAREPLAY_MOCK_YES = $(inherited) SHAREPLAY_MOCK
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) $(SWIFT_ACTIVE_COMPILATION_CONDITIONS_SHAREPLAY_MOCK_$(SHAREPLAY_MOCK))
 
-DEBUG_MODE = YES
+DEBUG_MODE = NO
 SWIFT_ACTIVE_COMPILATION_CONDITIONS_DEBUG_MODE_YES = $(inherited) DEBUG_MODE
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) $(SWIFT_ACTIVE_COMPILATION_CONDITIONS_DEBUG_MODE_$(DEBUG_MODE))
