--- a/Environments.xcconfig
+++ b/Environments.xcconfig
@@ -8,10 +8,10 @@
 // Configuration settings file format documentation can be found at:
 // https://developer.apple.com/documentation/xcode/adding-a-build-configuration-file-to-your-project
 
-SHAREPLAY_MOCK = NO
+SHAREPLAY_MOCK = YES
 SWIFT_ACTIVE_COMPILATION_CONDITIONS_SHAREPLAY_MOCK_YES = $(inherited) SHAREPLAY_MOCK
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) $(SWIFT_ACTIVE_COMPILATION_CONDITIONS_SHAREPLAY_MOCK_$(SHAREPLAY_MOCK))
 
-DEBUG_MODE = YES
+DEBUG_MODE = NO
 SWIFT_ACTIVE_COMPILATION_CONDITIONS_DEBUG_MODE_YES = $(inherited) DEBUG_MODE
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) $(SWIFT_ACTIVE_COMPILATION_CONDITIONS_DEBUG_MODE_$(DEBUG_MODE))
